--- a/DoodemGame/Packages/manifest.json
+++ b/DoodemGame/Packages/manifest.json
@@ -3,8 +3,12 @@
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.5.1",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.netcode.gameobjects": "1.8.1",
+    "com.unity.services.authentication": "3.3.3",
+    "com.unity.services.relay": "1.1.1",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
+    "com.unity.transport": "2.3.0",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.1",
     "com.unity.modules.ai": "1.0.0",
